# vchecksum

./: README.md  meson.build
src/: checksumitem.vala  checksums.vala  genchecksums.vala  main.vala  meson.build  reporter.vala  version.vala.in
